<resources>
    <string name="app_name">Ecommerce</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="boxo">Boxo</string>
    <string name="emailhint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forget_password"><u>Forget Password ?</u></string>
    <string name="login">Login</string>
    <string name="app_logo">app logo</string>
    <string name="new_user">New User ?</string>
    <string name="sign_in"><u>Sign in</u></string>
    <string name="user_name">User Name</string>
    <string name="gender">Gender :</string>
    <string name="radio_male">male</string>
    <string name="radio_female">famale</string>
    <string name="PickbrithDay">Pick Brith Day :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">Retry</string>
    <string name="details">Details :</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="remove">Remove</string>
    <string name="shr_error_password">Please Password must be greater than 8 letters</string>
    <string name="shr_error_email">Enter Vaild Email</string>
    <string name="profile">Profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="check_out_now">Check Out Now</string>

</resources>