<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/splashFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ecommerce.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_categoryFragment"
            app:destination="@id/categoryFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            />
        <action
            android:id="@+id/action_navigation_home_to_produtFragment"
            app:destination="@id/produtFragment" />
        <action
            android:id="@+id/action_navigation_home_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.ecommerce.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.ecommerce.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/categoryFragment"
        android:name="com.example.ecommerce.ui.Category.CategoryFragment"
        android:label="category_fragment"
        tools:layout="@layout/category_fragment" >
        <argument
            android:name="category"
            app:argType="com.example.ecommerce.model.Category" />
        <action
            android:id="@+id/action_categoryFragment_to_produtFragment2"
            app:destination="@id/produtFragment" />
    </fragment>
    <fragment
        android:id="@+id/produtFragment"
        android:name="com.example.ecommerce.ui.ProductDetails.ProdutFragment"
        android:label="produt_fragment"
        tools:layout="@layout/produt_fragment" >
        <argument
            android:name="product"
            app:argType="com.example.ecommerce.model.Product" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.ecommerce.ui.search.SearchFragment"
        android:label="SearchFragment" >
        <action
            android:id="@+id/action_searchFragment_to_produtFragment"
            app:destination="@id/produtFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.ecommerce.ui.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:launchSingleTop="false"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.ecommerce.ui.Login.LoginFragment"
        android:label="LoginFragment" >
        <action
            android:id="@+id/action_loginFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_signInFragment"
            app:destination="@id/signInFragment" />
    </fragment>
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.example.ecommerce.ui.signIn.SignInFragment"
        android:label="SignInFragment" >
        <action
            android:id="@+id/action_signInFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>